# ScholarNova

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README.zh-CN.md  SECURITY.md  docker-compose.yml  package-lock.json  package.json  requirements-lock.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  debug_import.py  desktop_server.py  min_start.py  pyproject.toml  quick_test.py  run_debug.py  run_server.py  run_simple.py  start.bat  start_debug.bat  test_mimo_direct.py  test_sn_backend.py  test_sn_fix.py  test_sn_verify.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  analysis.py  evidence.py  health.py  knowledge.py  model_config.py  network.py  papers.py  recommendations.py  router.py  search.py
backend/app/core/: __init__.py  cache.py  exceptions.py  logging.py  rate_limiter.py  ssrf.py
backend/app/models/: __init__.py  evidence.py  knowledge.py  paper.py  recommendation.py  search_run.py
backend/app/schemas/: __init__.py  evidence.py  knowledge.py  paper.py  query.py  search.py
backend/app/services/: journal_quality.py
backend/app/services/evaluation/: __init__.py  benchmark.py
backend/app/services/evidence/: __init__.py  extractor.py  verifier.py
backend/app/services/llm/: __init__.py  gateway.py  prompts.py
backend/app/services/pdf/: __init__.py  fetcher.py  parser.py
backend/app/services/search/: __init__.py  constraint_verifier.py  deduplicator.py  evidence_pipeline.py  orchestrator.py  query_planner.py  ranker.py  retriever.py
backend/app/services/sources/: __init__.py  arxiv.py  base.py  crossref.py  openalex.py  semantic_scholar.py
backend/scripts/: evaluate_retrieval.py  run_official_benchmark.py
backend/tests/: conftest.py
backend/tests/evaluation/: __init__.py  metrics.py  test_benchmark_adapter.py  test_evaluation.py
backend/tests/fixtures/: __init__.py  sample_papers.json  sample_queries.json
backend/tests/mocks/: __init__.py  mock_llm.py  mock_papers.py  mock_sources.py
backend/tests/test_api/: __init__.py  test_analysis_fallback.py  test_health.py  test_model_config.py  test_papers.py  test_search.py
backend/tests/test_services/: __init__.py  test_deduplicator.py  test_fulltext_analysis.py  test_journal_quality.py  test_llm_gateway.py  test_pdf_fetcher.py  test_query_planner.py  test_ranker.py  test_retriever_progress.py
backend/tests/test_sources/: __init__.py  test_arxiv.py  test_crossref.py  test_integration.py  test_openalex.py  test_semantic_scholar.py
desktop/: after-pack.cjs  main.cjs
docs/: API_KEYS.md  desktop-release.zh-CN.md
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
outputs/: ScholarNova-质量分析与比赛对标报告-2026-07-01.md  competition-benchmark-report-2026-07-02.md  optimization-report-2026-07-02.md
scripts/: seed_data.py  setup.sh
(+82 files in other folders)
